<resources>
    <string name="app_name">DemoCrime</string>
    <string name="loginuser">Login</string>
    <string name="registeruser">Register</string>
    <string name="registeruserbutton">Register</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginuserbutton">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="fileComplaint">File a Complaint</string>
    <string name="dialSOS">SOS/Emergency</string>

    <array name="types_complaints">
        <item>Harassment</item>
        <item>Theft</item>
        <item>Pickpocketing</item>
        <item>Car Jacking</item>
        <item>Robbery</item>
        <item>Dacoity</item>
        <item>Murder</item>
        <item>Online Fraud</item>
        <item>Others</item>
    </array>

    <string name="selecttype">Select the type of Crime:</string>
    <string name="providedesc">Provide the Description: </string>
    <string name="submit_report">Submit Report</string>
    <string name="signout">Sign Out</string>
    <string name="loginme">LOGIN PAGE</string>
    <string name="registerme">REGISTER USER</string>
    <string name="dialemergency">Dial 100</string>
    <string name="sosmorsecode">SOS Morse Code</string>
    <string name="flash">Turn on Flash</string>
    <string name="contactemergency">Emergency Contact</string>
    <string name="about_developer">About Developer</string>
    <string name="logout">Logout</string>
    <string name="about_me">About Developer</string>
    <string name="pranay_pathole">Pranay Pathole</string>
    <string name="follow_me">Follow ME</string>
    <string name="twitter">
        <a href="https://www.twitter.com/PPathole">Twitter</a>
    </string>
    <string name="instagram">
        <a href="https://instagram.com/pranaypathole">Instagram</a>
    </string>
    <string name="toDo">TODO</string>
    <string name="todo">TODO</string>
    <string name="home">HomePage</string>
    <string name="adminlogin">Sign in as Admin</string>
    <string name="admin_login">Admin Login</string>
    <string name="loginasAdmin">Login</string>
    <string name="admin_email">Admin Email</string>
    <string name="admin_password">Admin Password</string>
    <string name="LOG">Logout</string>

</resources>
