<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6200EE"
    tools:context=".aboutDeveloper">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/about_me"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView7"
        android:drawableLeft="@drawable/ic_android_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:gravity="center"
        android:text="@string/pranay_pathole"
        android:textSize="30sp"
        android:textStyle="italic"
        android:drawableStart="@drawable/ic_android_black_24dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/follow_me"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="192dp"
        android:text="@string/twitter"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:text="@string/instagram"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="182dp"
        android:layout_toStartOf="@+id/twitter"
        app:srcCompat="@drawable/twitter"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="94dp"
        app:srcCompat="@drawable/instagram"
        android:contentDescription="@string/todo" />
</RelativeLayout>