<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6200EE"
    tools:context=".adminLogin">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/admin_login"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/adminEmail"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:ems="10"
        android:hint="@string/admin_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_lock_black_24dp" />

    <EditText
        android:id="@+id/adminPassword"
        android:drawableLeft="@drawable/ic_warning_black_24dp"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:ems="10"
        android:hint="@string/admin_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_warning_black_24dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:text="@string/loginasAdmin" />
</RelativeLayout>