<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginmainButton"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:background="@android:color/background_dark"
        android:onClick="loginUser"
        android:text="@string/loginuser"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_dark"
        android:orientation="vertical">

        <Button
            android:id="@+id/registermainButton"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:onClick="registerUser"
            android:text="@string/registeruser"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:fontFamily="sans-serif" />
</RelativeLayout>